# sigRDF

./: .gitignore  010425_structured_rf_interpretability.ipynb  020425_structured_rf_interpretability.ipynb  030425_rule_aggregate_training.ipynb  030425_structured_rf_interpretability.ipynb  Mathematical Proof.md  Methodology.md  Readme.md  pyproject.toml  requirements.txt  time-complexity.md
datasets/: heart.ipynb
experimentations/: anemia.ipynb  aqi_health_updated.ipynb  diabetes.ipynb  heart.ipynb  heart_new_viz.ipynb  kidney.ipynb
experimentations/sig_vs_shap_interaction.ipynb/: shap_interaction_time_complexity.ipynb
notebook/: monkey_pox.ipynb  ovarian_patient_data.ipynb  stroke_risk.ipynb
sigRF/: SIG.py  cluster_rules.py  decision_path.py  encode_decode.py
